Fix nav width on mobile

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -60,6 +60,10 @@
   font-style: normal;
 }
 
+header nav {
+  width: 100%;
+}
+
 .button {
   background-color: rgb(16 13 17);
   border: 1px solid rgb(16 13 17);
